<resources>
    <string name="app_name">TimeHunter</string>
    <string name="group_descrip">Group Description:</string>
    <string name="group_name">Group Name:</string>
    <string name="add_photo_label">Add Group Photo</string>
    <string name="create_group_title">Create Group</string>
    <string name="confirm">Confirm</string>
    <string name="create">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="group_info">Enter Group Information</string>
    <string name="confirm_page_title">Confirm Group Details</string>
    <string name="confirm_group_name_label">Group Name: </string>
    <string name="confirm_group_desc_label">Group Description: </string>
    <string name="confirm_group_contacts">Contacts: </string>
    <string name="create_edit">EDIT</string>
    <string name="contacts">Contacts</string>
    <string name="group">Group</string>
    <string name="event">Event</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
